Fixed pmd and find bugs Issues